Fix menu on mobile

--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -4,6 +4,7 @@ nav {
 
 .navbar-brand {
   padding: 0;
+  max-width: 50%;
 
   img {
     height: 100%;
